tests/baselines/reference/parserArrowFunctionExpression2.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression2.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression2.ts(1,15): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression2.ts(1,18): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression2.ts (3 errors) ====
    a = () => { } || a
    ~
!!! error TS2304: Cannot find name 'a'.
                  ~~
!!! error TS1005: ';' expected.
                     ~
!!! error TS2304: Cannot find name 'a'.